--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -132,7 +132,7 @@
 \hypersetup{
   pdftitle={Interspecies comparisons of Mg/Ca ratios in limpet shells},
   pdfauthor={Niklas Hausmann; Donna Surge; Francisco Zangrando; Angelica Tivoli; Ivan Briz-Godino},
-  pdfkeywords={keyword1, keyword2},
+  pdfkeywords={Sclerochronology, Limpets, Elemental Ratio, Mg/Ca},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -194,20 +194,33 @@ This document is a template demonstrating the Aps format.
 
 
 \begin{keyword}
-    keyword1 \sep 
-    keyword2
+    Sclerochronology \sep Limpets \sep Elemental Ratio \sep 
+    Mg/Ca
 \end{keyword}
 \end{frontmatter}
     
-\begin{figure}[H]
+\section{Introduction}\label{Introduction}
 
-{\centering \includegraphics{Manuscript_files/figure-pdf/Raw Data-1.pdf}
+This study provides a short reassessment of the use of Magnesium to
+Calcium (Mg/Ca) ratios in Atlantic limpet shells to determine past sea
+surface temperatures. While recent studies of particularly
+\emph{Patella} sp. in the Mediterranean and Southwest Europe have
+provided promising results
+\citep{Hausmann2019-fi, Garcia-Escarzaga2015-jc, Garcia-Escarzaga2018-nf}.
 
-}
+In previous studies, various limpet specimens (Patella vulgata, Nacella
+magellanica and Nacella odifosdio) have been studied using Mg/Ca with
+mixed results. While Patella vulgata along the Spanish shoreline has
+since then repeatedly produced reliable correlations between sst and
+Mg/Ca ratios, this is not the case for other species.
 
-\caption{Raw Mg/Ca and δ\textsuperscript{18}O Data}
+In this study, we present elemental maps of various such species
+together with stable oxygen isotope values for some of the specimens.
+Some of these\ldots{}
 
-\end{figure}%
+\section{Methods}\label{Methods}
+
+\section{Results}\label{Results}
 
 \begin{figure}[H]
 
@@ -218,6 +231,101 @@ This document is a template demonstrating the Aps format.
 \caption{Correlation graphs for all specimens}
 
 \end{figure}%
+
+\section{Discussion}\label{discussion}
+
+\begin{figure}[H]
+
+{\centering \includegraphics{Manuscript_files/figure-pdf/Ferguson Data-1.pdf}
+
+}
+
+\caption{Correlation graphs for Ferguson et al.~specimens}
+
+\end{figure}%
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.3889}}@{}}
+\caption{Overview of comparative correlations
+\{\#tab:correlations\}}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Species
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Locality
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Specimen
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Correlation R\textsuperscript{2}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Study
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Species
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Locality
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Specimen
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Correlation R\textsuperscript{2}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Study
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+\emph{Patella depressa} & Northern Spain & LAN541 & 0.87 &
+\href{https://doi.org/10.3390/app11072959}{\textbf{10.3390/app11072959}} \\
+& & LAN545 & 0.86 & \\
+& & LAN554 & 0.78 & \\
+& & LAN559 & 0.82 & \\
+\emph{Patella caerulea} & Croatia & ISTPC1 & 0.9 &
+10.1038/s41598-019-39959-9 \\
+& & ISTPC2 & 0.84 & \\
+& Crete & AF1911A & 0.91\footnote{SST only, no other geochemical data
+  available} & \\
+& & AF3003A & 0.92\footnote{SST only, no geochemical data available}
+& \\
+& Israel & AKKPC2 & 0.96 & \\
+& & AKKPC3 & 0.89 & \\
+& & FRMPC1 & 0.84 & \\
+& & FRMPC2 & 0.96 & \\
+& Libya & MO31A & 0.83 & \\
+& & MP64A & 0.33 & \\
+& & MP67A & 0.96 & \\
+& & MP68A & 0.81 & \\
+& Malta & MA10 & 0.82 & \\
+& Tunisia & TUNPC1 & 0.81 & \\
+& & TUNPC2 & 0.78 & \\
+& Turkey & ANTPC1 & 0.95 & \\
+& & ANTPC2 & 0.93 & \\
+& & KIZPC1 & 0.94 & \\
+& & KIZPC2 & 0.86 & \\
+Patella rustica & Gibraltar & JL1 & 0.02 &
+\href{https://doi.org/10.1016/j.epsl.2011.05.054}{doi.org/10.1016/j.epsl.2011.05.054} \\
+& & JL2 & 0.8 (0.79) & \\
+Patella caerulea & Gibraltar & JM00 & 0.69 (0.79) & \\
+& & JM30 & 0.83 (0.79) & \\
+Patella vulgata & Orkney & ORK-LT5 & not reported, here 0.88 &
+doi.org/10.1016/j.palaeo.2016.10.021 and this study \\
+& & & & \\
+& & & & \\
+& & & & \\
+\end{longtable}
+
+\subsection{Reanalysis of ORK-LT5}\label{reanalysis-of-ork-lt5}
+
+\includegraphics{Manuscript_files/figure-pdf/unnamed-chunk-1-1.pdf}
+
+\includegraphics{Manuscript_files/figure-pdf/subsample-1.pdf}
 
 
   \bibliography{bibliography.bib}
